--- a/src/Resources/config/sylius/ui.yaml
+++ b/src/Resources/config/sylius/ui.yaml
@@ -1,9 +1,9 @@
 sylius_ui:
     events:
-        sylius.admin.layout.javascripts:
-            blocks:
-                monsieurbiz_richeditor_init_app:
-                    template: '@MonsieurBizSyliusRichEditorPlugin/Admin/app.html.twig'
+#        sylius.admin.layout.javascripts:
+#            blocks:
+#                monsieurbiz_richeditor_init_app:
+#                    template: '@MonsieurBizSyliusRichEditorPlugin/Admin/app.html.twig'
 
         sylius.shop.layout.javascripts:
             blocks:
